--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,74 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap');
+
+:root {
+  --black: #1F2421;
+  --green: #49A078;
+  --lt-green: #9CC5A1;
+  --white: #E9ECEA;
+}
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Rubik', sans-serif;
+  margin: 3rem 15vw;
+  color: var(--black);
+}
+
+main {
+  max-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 a {
-  color: #00B7FF;
+  color: var(--secondary);
+  text-decoration: none;
+}
+
+h1, h2, p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  gap: 1rem;
+}
+
+li {
+  background: var(--white);
+  border: 1px solid var(--lt-green);
+  border-radius: 0.3rem;
+  padding: 0.75rem 1.25rem;
+  display: grid;
+  gap: 0.25rem;
+}
+
+small {
+  color: var(--green)
+}
+
+h2 {
+  font-size: 1.2rem;
+}
+
+@media screen and (max-width: 1024px) {
+  body {
+    margin: 3rem 10vw;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    margin: 3rem 6vw;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    margin: 3rem 1rem;
+  }
 }
