--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Mini Messageboard</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <main> 
       <h1><%= title %></h1>
+
+      <a href="/new">+ New message</a>
 
       <% if (messages.length > 0) { %>
         <ul>
