Users can post new messages

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -16,7 +16,7 @@
         <textarea name="message" id="message" rows="5"></textarea>
         
         <div class="buttons">
-          <button type="button" class="btn btn-secondary">Cancel</button>
+          <a class="btn btn-secondary" href="/">Cancel</a>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
      </form>
