--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,11 +44,16 @@ ul {
 
 li {
   background: var(--white);
-  border: 1px solid var(--green);
   border-radius: 0.3rem;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.25);
   padding: 0.75rem 1.25rem;
   display: grid;
   gap: 0.25rem;
+  transition: all 0.2s ease;
+}
+
+li:hover {
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
 }
 
 small {
@@ -112,6 +117,7 @@ input {
 }
 
 .btn-secondary {
+  text-decoration: none;
   background: var(--white);
 }
 
